<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clickable_button"
        android:layout_width="220dp"
        android:layout_height="67dp"
        android:layout_marginBottom="44dp"
        android:text="@string/clickable_button_Start"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginBottom="184dp"
        android:text="@string/reset_button"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me_label"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickable_button" />

    <TextView
        android:id="@+id/textView_clickCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_count"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/clickable_button"
        app:layout_constraintEnd_toStartOf="@+id/textView_clickCountLabel"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timeRemaining"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/textView_timeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeRemaining"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clickable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timeRemainingLabel"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView_timeRemainingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeRemainingLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clickable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/textView_clickCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/click_countLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clickable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timeRemaining"
        app:layout_constraintVertical_bias="0.616" />

</androidx.constraintlayout.widget.ConstraintLayout>